# SPEEDR-Pipeline

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
