[project]
name = "speedr-pipeline"
readme = "README.md"
description = "SPEEDR Pipeline for ML-guided directed protein evolution on PETase."
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
	{name = "Dawning (JiaJia) Fu", email = "dawningjiaxi.fu@wyss.harvard.edu"}
]
maintainers = [
	{name = "Dawning (JiaJia) Fu", email = "dawningjiaxi.fu@wyss.harvard.edu"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy ~= 1.26",
	"pandas",
	"jupyter",
	"scikit-learn",
]
keywords = ["machine learning", "gaussian", "mutation",]
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]
[project.optional-dependencies]
docs = [
  "mkdocs-material",
]   
